--- a/class-4/combinator.html
+++ b/class-4/combinator.html
@@ -39,6 +39,16 @@
         <p>Pakistan,[c] officially the Islamic Republic of Pakistan,[d] is a country in South Asia. It is the world's fifth-most populous country with a population exceeding 212.2 million, and has the world's second-largest Muslim population. Pakistan is the 33rd-largest country by area, spanning 881,913 square kilometres (340,509 square miles). It has a 1,046-kilometre (650-mile) coastline along the Arabian Sea and Gulf of Oman in the south and is bordered by India to the east, Afghanistan to the west, Iran to the southwest, and China to the northeast. It is separated narrowly from Tajikistan by Afghanistan's Wakhan Corridor in the northwest, and also shares a maritime border with Oman.</p>
     </div>
     </div>
+    <div>
+        <video width="500px" controls poster="contact.png">
+            <source src="Freelancer.mp4" type="video/mp4">
+        </video>
+    </div>
+    <div>
+        <audio controls>
+            <source src="ilets.mp3" type="audio/mp3" >
+        </audio>
+    </div>
     
     
 </body>
