finished css units and their values

--- a/class-4/combinator.html
+++ b/class-4/combinator.html
@@ -50,6 +50,8 @@
         </audio>
     </div>
     
-    
+    <div>
+        <img src="../Sprint 1/images/icon/1.png" alt="icon">
+    </div>
 </body>
 </html>
