--- a/Class 5/class5 task 2/float.html
+++ b/Class 5/class5 task 2/float.html
@@ -14,7 +14,11 @@
         </div>
         <div class="right">
         <h1 >right float</h1>
-    </div>
+        </div>
+        <div class="end">
+            <h1>last float</h1>
+        </div>
+        
     </div>
 </body>
 </html>
