mini project is done

--- a/Project 1/details.html
+++ b/Project 1/details.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <div class="image">
-        <img src="codehtml.jpg">
-        <img src="codecss.jpg">
-        <img src="project1.jpg">
+        <img src="images/codehtml.jpg">
+        <img src="images/codecss.jpg">
+        <img src="images/project1.jpg">
     </div>
     <div>
         <h4>Cetificates</h4>
