--- a/Class 5/class5 task 1/index.html
+++ b/Class 5/class5 task 1/index.html
@@ -19,11 +19,11 @@
         <div class="form">
             <form>
                 <div>
-                  <label for="username">Username</label><br>
+                  <label for="username">Username:*required</label><br>
               <input class="text"   type="text" placeholder="username">
             </div><br>
             <div>
-              <label id=password>Password</label><br>
+              <label id=password>Password:*required</label><br>
               <input class="text" type="text" placeholder="enter your password">
             </div><br>
             <div>
